--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install .
-        pip install sphinx furo
+        pip install sphinx furo shibuya
 
     - name: Build docs
       working-directory: docs
